# appD

./: README.md  meson.build
src/: appd.in  main.py  meson.build
